Added FoodOption tests Renamed FoodOrder to CustomerOrder
